Planner: Initial commit.

--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(211, 177, 75, 0.53);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+form{
+  padding: 20px;
+  margin-top: 60px;
+  border-radius: 10px;
+}
+
+form button, form h5{
+  margin: 20px 0;
 }
